--- a/contact.html
+++ b/contact.html
@@ -32,11 +32,10 @@
         <div id="myNav" class="navbar">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()" id="close">&times;</a>
             <div class="navbar-content">
-                <a href="#home" style="color: rgb(10, 247, 247);" id="active">Home</a>
+                <a href="home.html" style="color: rgb(10, 247, 247);" id="active">Home</a>
                 <a href="resume.html">Resume</a>
                 <a href="blog.html" style="color: rgb(10, 73, 247);">Blog</a>
                 <a href="contact.html">Contact</a>
-                <a href="research.html" style="color: rgb(184, 247, 10);">Research</a>
             </div>
         </div>
         
@@ -54,13 +53,13 @@
                     <textarea id="message" placeholder="Message *"></textarea><br>
                     <button type="submit" id="btn-submit">Send</button>
                     <div class="soci-contact">
-                       <a href="https://m.me/Nelvine.Omondi" target="_blank">
+                       <a href="" target="_blank">
                         <div class="messenger">
                             <img src="images/Iconslogo/messengerf.png">
                             <div class="text">Meet me in Messenger</div>
                         </div>
                         </a>
-                        <a href="mailto:omondinelvine884@gmail.com?subject=Site_Message&body=Hi" target="_blank">
+                        <a href="mailto:eugeneregi2019@gmail.com?subject=Site_Message&body=Hi" target="_blank">
                         <div class="email">
                              <img src="images/Iconslogo/envelope.png">
                             <div class="text">Send Me Email</div>
@@ -74,7 +73,7 @@
         </div>
         <!--Copyright Information-->
         <div class="copyright">
-            <p>&copy; 2020 <a href="https://www.linkedin.com/in/nelvin-omondi-338340195/">Nelvin Omondi</a></p>
+            <p>&copy; 2020 <a href="https://www.linkedin.com/in">Eugene Iregi</a></p>
         </div>
         <script src="js/main.js" type="text/javascript"></script>
         <script src="js/formValidate.js" type="text/javascript"></script>
