--- a/home.html
+++ b/home.html
@@ -260,7 +260,7 @@
 
     <!--Copyright Information-->
     <div class="copyright">
-        <p>&copy; 2020 <a href="https://www.linkedin.com/in/nelvin-omondi-338340195/">Nelvin Omondi</a></p>
+        <p>&copy; 2020 <a href="">Eugene Iregi</a></p>
     </div>
     <script>
         //The below line dynamically change the name in banner area.
